# werewolf-bot-rs

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
src/: main.rs  middleware.rs
