[package]
name = "werewolf-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
futures-util = "0.3.28"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
actix-http = "3.3.1"
